Test/traits/GeneralTraits.dfy.expect
GeneralTraits.dfy(20,25): Error: datatype is not allowed to extend 'RefParent', because it is a reference type
GeneralTraits.dfy(21,27): Error: abstract type is not allowed to extend 'RefParent', because it is a reference type
GeneralTraits.dfy(39,36): Error: Raised while checking export set ProvideThem: a abstract type can only extend traits (found 'Trait')
GeneralTraits.dfy(25,9): Error: This export set is not consistent: ProvideThem
4 resolution/type errors detected in GeneralTraits.dfy
